vlib/v/checker/tests/sumtype_of_fntype_assign_err.vv
type Expr = fn (int) int | int

fn id(n int) int {
	return n
}

fn f() Expr {
	return id
}

fn main() {
	mut m := map[string]Expr{}

	m['f'] = f
}
